--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,7 +11,7 @@
           <h1 class="logo">Tower</h1>
           <h1 class="solgan">团队协作本来就应该这么简单</h1>
           <p><button class="btn btn-primary">免费注册</button></p>
-          <p><button class="btn">登录</button></p>
+          <p><button class="btn btn-link">登录</button></p>
         </div>
       </div>
 
