Make border-color same as background color to remove border. (Maybe this is better way to remove border from css file? )

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -64,13 +64,13 @@ body, html {
     background-color: #3ccefd;
     color: rgba(255, 255, 255, 0.9);
     font-size: 18px;
-    border-color: none;
+    border-color: #3ccefd;
 }
 
 .btn-primary:hover {
     background: #3cdefd;
     color: rgba(255, 255, 255, 0.9);
-    border-color: none;
+    border-color: #3cdefd;
 }
 
 .btn-primary:active,
@@ -79,7 +79,7 @@ body, html {
 .btn-primary:focus {
     background: #3cbefd;
     color: rgba(255, 255, 255, 0.9);
-    border-color: none;
+    border-color: #3cbefd;
 }
 
 .btn-link {
