--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
     <div class="background">
       <div class="container">
         <div class="centerarea">
-          <h1 class="home_logo">Tower</h1>
+          <h1 class="home-logo">Tower</h1>
           <h1 class="solgan">团队协作本来就应该这么简单</h1>
           <p><button class="btn btn-primary">免费注册</button></p>
           <p><button class="btn btn-link">登录</button></p>
