--- a/app/views/static_pages/sign_up.html.erb
+++ b/app/views/static_pages/sign_up.html.erb
@@ -4,18 +4,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div class="background_color">
+    <div class="background-color">
       <div class="container">
-        <div class="sign_up_area">
+        <div class="sign-up-area">
           <h1 class="logo">Tower</h1>
-          <div class="sign_box">
-            <h3 class="sign_up_title">注册</h3>
+          <div class="sign-box">
+            <h3 class="sign-title">注册</h3>
             <p><input class="form-control" placeholder="团队名称"></p>
             <p><input class="form-control" placeholder="你的名字"></p>
             <p><input type="email" class="form-control" placeholder="邮箱,例如: qq号码@qq.com"></p>
             <p><input type="password" class="form-control" placeholder="密码， 至少包含6位字符"></p>
-            <p><button class="btn btn-primary sign_up_button">注册</button></p>
-            <p><button class="btn btn-link direct_sign_in">已有账号？直接登录</button></p>
+            <p><button class="btn btn-primary sign-button">注册</button></p>
+            <p><button class="btn btn-link sign-link">已有账号？直接登录</button></p>
           </div>
         </div>
       </div>
