--- a/app/views/static_pages/sign_in.html.erb
+++ b/app/views/static_pages/sign_in.html.erb
@@ -13,8 +13,9 @@
             <p><input type="email" class="form-control" placeholder="登录邮箱"></p>
             <p><input type="password" class="form-control" placeholder="密码"></p>
             <div class="form-check">
-              <input type="checkbox" class="form-check-input">
-              <label class="form-check-label">下次自动登录</label>
+              <label class="form-check-label">
+		<input type="checkbox" class="form-check-input">下次自动登录
+	      </label>
 	      <button class="btn btn-link sign-link forget-button">忘记密码了？</button>
 	    </div>
 	    <p><button class="btn btn-primary">登录</button></p>
