--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,8 +9,12 @@
         <div class="centerarea">
           <h1 class="home-logo">Tower</h1>
           <h1 class="solgan">团队协作本来就应该这么简单</h1>
-          <p><button class="btn btn-primary">免费注册</button></p>
-          <p><button class="btn btn-link">登录</button></p>
+          <p><button class="btn btn-primary">
+	    <a href="/sign_up" style="color:inherit" class="no-underline-link">免费注册</a>
+	  </button></p>
+          <p><button class="btn btn-link">
+	    <a href="/sign_in" style="color:inherit" class="no-underline-link">登录</a>
+	  </button></p>
         </div>
       </div>
     </div>
