--- a/app/views/homes/new.html.erb
+++ b/app/views/homes/new.html.erb
@@ -10,11 +10,11 @@
           <h1 class="home-logo">Tower</h1>
           <h1 class="solgan">团队协作本来就应该这么简单</h1>
           <p><button class="btn btn-primary">
-	    <a href="/sign_up" style="color:inherit" class="no-underline-link">免费注册</a>
-	  </button></p>
+            <%= link_to "免费注册", sign_up_path, :style => "color:inherit", :class => "no-underline-link" %>
+          </button></p>
           <p><button class="btn btn-link">
-	    <a href="/sign_in" style="color:inherit" class="no-underline-link">登录</a>
-	  </button></p>
+            <%= link_to "登录", sign_in_path, :style => "color:inherit", :class => "no-underline-link" %>
+          </button></p>
         </div>
       </div>
     </div>
