--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,7 +11,7 @@
           <div class="sign-box">
             <h3 class="sign-title">注册</h3>
             <%= form_for(@user, url: sign_up_path) do |f| %>
-              <p><input class="form-control" placeholder="团队名称"></p>
+              <p><input class="form-control" placeholder="团队名称" name="team_name"></p>
               <p><%= f.text_field :name, class: "form-control", placeholder: "你的名字" %></p>
               <p><%= f.email_field :email, class: "form-control", placeholder: "邮箱,例如: qq号码@qq.com" %></p>
               <p><%= f.password_field :password, class: "form-control", placeholder: "密码， 至少包含6位字符" %></p>
