--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,37 +1,43 @@
-<header class="navbar navbar-fixed-top navbar-default">
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <header class="navbar navbar-fixed-top navbar-default">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">
-	<%= Team.find_by_hashid(params[:id]).name %>
-	</a>
+        <%= Team.find_by_hashid(params[:id]).name %>
+      </a>
     </div>
     <div class="container">
       <nav>
-	<ul class="nav navbar-nav navbar-left">
+        <ul class="nav navbar-nav navbar-left">
           <li><%= link_to "项目", root_path %></li>
           <li><%= link_to "动态", root_path %></li>
           <li><%= link_to "团队", root_path %></li>
           <li><%= link_to "我自己", root_path %></li>
-	</ul>
+        </ul>
       </nav>
       <nav>
-	<ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "搜索", root_path %></li>
           <li><%= link_to "通知", root_path %></li>
           <% if logged_in? %>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle sign-link" data-toggle="dropdown">
-		账户 <b class="caret"></b>
+                账户 <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-		<li><%= link_to "设置", '#' %></li>
-		<li class="divider"></li>
-		<li>
+                <li><%= link_to "设置", '#' %></li>
+                <li class="divider"></li>
+                <li>
                   <%= link_to "退出", sign_out_path, method: :delete %>
-		</li>
+                </li>
               </ul>
             </li>
           <% end %>
-	</ul>
+        </ul>
       </nav>
     </div>
-</header>
+  </header>
+
+</html>
