--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -2,25 +2,26 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <header class="navbar navbar-fixed-top navbar-default">
-    <div class="container">
-      <nav>
-        <ul class="nav navbar-nav navbar-left">
-          <li><%= link_to Team.find_by_hashid(params[:id]).name, root_path %></li>
-          <li><%= link_to "项目", root_path %></li>
-          <li><%= link_to "动态", root_path %></li>
-          <li><%= link_to "团队", root_path %></li>
-          <li><%= link_to "我自己", root_path %></li>
-        </ul>
-      </nav>
-      <nav>
-        <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to "搜索", root_path %></li>
-          <li><%= link_to "通知", root_path %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle sign-link" data-toggle="dropdown">
-            账户
-            <b class="caret"></b>
+  <body>
+    <header class="navbar navbar-fixed-top">
+      <div class="container top-header">
+        <nav>
+          <ul class="nav navbar-nav navbar-left">
+            <li><%= link_to Team.find_by_hashid(params[:id]).name, root_path, :class => "team-name"%></li>
+            <li><%= link_to "项目", root_path, :class => "top-header-item" %></li>
+            <li><%= link_to "动态", root_path, :class => "top-header-item" %></li>
+            <li><%= link_to "团队", root_path, :class => "top-header-item" %></li>
+            <li><%= link_to "我自己", root_path, :class => "top-header-item" %></li>
+          </ul>
+        </nav>
+        <nav>
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "搜索", root_path, :class => "top-header-item" %></li>
+            <li><%= link_to "通知", root_path, :class => "top-header-item" %></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle sign-link" data-toggle="dropdown">
+                <span class="top-header-item">账户</span>
+                <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "设置", '#' %></li>
@@ -29,9 +30,12 @@
                   <%= link_to "退出", sign_out_path, method: :delete %>
                 </li>
               </ul>
-          </li>
-        </ul>
-      </nav>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="background-color">
     </div>
-  </header>
+  </body>
 </html>
