--- a/app/views/teams/show.html+phone.erb
+++ b/app/views/teams/show.html+phone.erb
@@ -2,39 +2,19 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <header class="navbar navbar-fixed-top navbar-default">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">
-        手机客户端 <%= Team.find_by_hashid(params[:id]).name %>
-      </a>
-    </div>
-    <div class="container">
-      <nav>
-        <ul class="nav navbar-nav navbar-left">
-          <li><%= link_to "项目", root_path %></li>
-          <li><%= link_to "动态", root_path %></li>
-          <li><%= link_to "团队", root_path %></li>
-          <li><%= link_to "我自己", root_path %></li>
-        </ul>
-      </nav>
-      <nav>
-        <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to "搜索", root_path %></li>
-          <li><%= link_to "通知", root_path %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle sign-link" data-toggle="dropdown">
-              账户 <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "设置", '#' %></li>
-              <li class="divider"></li>
-              <li>
-                <%= link_to "退出", sign_out_path, method: :delete %>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+  <body>
+    <header class="navbar navbar-fixed-bottom navbar-default">
+      <div class="container">
+        <nav>
+          <ul class="nav navbar-nav">
+            <div class="phone-bottom-nav-item"><li><%= link_to "项目", root_path, :class => "top-header-item" %></li></div>
+            <div class="phone-bottom-nav-item"><li><%= link_to "动态", root_path, :class => "top-header-item" %></li></div>
+            <div class="phone-bottom-nav-item"><li><%= link_to "我的", root_path, :class => "top-header-item" %></li></div>
+            <div class="phone-bottom-nav-item"><li><%= link_to "团队", root_path, :class => "top-header-item" %></li></div>
+            <div class="phone-bottom-nav-item"><li><%= link_to "更多", root_path, :class => "top-header-item" %></li></div>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
