--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -3,38 +3,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <header class="navbar navbar-fixed-top">
+    <nav class="navbar navbar-fixed-top">
       <div class="container top-header">
-        <nav>
-          <ul class="nav navbar-nav navbar-left">
-            <li><%= link_to Team.find_by_hashid(params[:id]).name, root_path, :class => "team-name"%></li>
-            <li><%= link_to "项目", root_path, :class => "top-header-item" %></li>
-            <li><%= link_to "动态", root_path, :class => "top-header-item" %></li>
-            <li><%= link_to "团队", root_path, :class => "top-header-item" %></li>
-            <li><%= link_to "我自己", root_path, :class => "top-header-item" %></li>
-          </ul>
-        </nav>
-        <nav>
-          <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "搜索", root_path, :class => "top-header-item" %></li>
-            <li><%= link_to "通知", root_path, :class => "top-header-item" %></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle sign-link" data-toggle="dropdown">
-                <span class="top-header-item">账户</span>
-                <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "设置", '#' %></li>
-                <li class="divider"></li>
-                <li>
-                  <%= link_to "退出", sign_out_path, method: :delete %>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </nav>
+        <ul class="nav navbar-nav navbar-left">
+          <li><%= link_to Team.find_by_hashid(params[:id]).name, root_path, :class => "team-name"%></li>
+          <li><%= link_to "项目", root_path, :class => "top-header-item" %></li>
+          <li><%= link_to "动态", root_path, :class => "top-header-item" %></li>
+          <li><%= link_to "团队", root_path, :class => "top-header-item" %></li>
+          <li><%= link_to "我自己", root_path, :class => "top-header-item" %></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <div class="col-sm-3 col-md-3">
+              <form class="navbar-form" role="search">
+                <div class="input-group top-search-bar-group">
+                  <input type="text" class="form-control top-search-bar-input" placeholder="搜索任务">
+                  <div class="input-group-btn">
+                    <button class="btn btn-default top-search-bar-button" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </li>
+          <li><a><span class="glyphicon glyphicon-bell phone-bottom-item-icon top-header-item"></span></a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle sign-link" data-toggle="dropdown">
+              <span class="top-header-item">账户</span>
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "设置", '#' %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "退出", sign_out_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
-    </header>
+    </nav>
     <div class="background-color">
     </div>
   </body>
