--- a/app/views/teams/show.html+phone.erb
+++ b/app/views/teams/show.html+phone.erb
@@ -3,6 +3,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
+    <div class="phone-top-bar">
+      <div class="phone-top-left-area">
+        <span class="phone-top-name">项目</span>
+      </div>
+      <div class="phone-top-right-area">
+        <span class="glyphicon glyphicon-th-list phone-top-item-icon"></span>
+      </div>
+      <div class="phone-top-right-area">
+        <span class="glyphicon glyphicon-search phone-top-item-icon"></span>
+      </div>
+    </div>
     <header class="navbar navbar-fixed-bottom navbar-default">
       <div class="container">
         <nav>
@@ -10,23 +21,23 @@
             <div class="phone-bottom-tab">
 	      <span class="glyphicon glyphicon-inbox phone-bottom-item-icon"></span>
 	      <li><%= link_to "项目", root_path, :class => "phone-bottom-item-text" %></li>
-	    </div>
+            </div>
             <div class="phone-bottom-tab">
-              <span class="glyphicon glyphicon-comment phone-bottom-item-icon"></span>
+	      <span class="glyphicon glyphicon-comment phone-bottom-item-icon"></span>
 	      <li><%= link_to "动态", root_path, :class => "phone-bottom-item-text" %></li>
-	    </div>
+            </div>
             <div class="phone-bottom-tab">
-              <span class="glyphicon glyphicon-user phone-bottom-item-icon"></span>
+	      <span class="glyphicon glyphicon-user phone-bottom-item-icon"></span>
 	      <li><%= link_to "我的", root_path, :class => "phone-bottom-item-text" %></li>
-	    </div>
+            </div>
             <div class="phone-bottom-tab">
-              <span class="glyphicon glyphicon-calendar phone-bottom-item-icon"></span>
+	      <span class="glyphicon glyphicon-calendar phone-bottom-item-icon"></span>
 	      <li><%= link_to "团队", root_path, :class => "phone-bottom-item-text" %></li>
-	    </div>
+            </div>
             <div class="phone-bottom-tab">
-              <span class="glyphicon glyphicon-tasks phone-bottom-item-icon"></span>
+	      <span class="glyphicon glyphicon-tasks phone-bottom-item-icon"></span>
 	      <li><%= link_to "更多", root_path, :class => "phone-bottom-item-text" %></li>
-	    </div>
+            </div>
           </ul>
         </nav>
       </div>
