--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html class="single-page-html">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body>
-    <div class="background-color">
-      <div class="container">
+  <body class="single-page-body">
+    <div class="single-page-background">
+      <div class="single-page-container">
         <div class="sign-in-area">
           <h1 class="logo">Tower</h1>
           <div class="sign-box">
             <%= form_for(:password_reset, url: password_resets_path) do |f| %>
               <h3 class="sign-title">重新设置密码</h3>
               <p><%= f.email_field :email, class: "form-control", placeholder: "请填写登录邮箱" %></p>
-              <p><%= f.submit "发送密码重设邮件", class: "btn btn-primary" %></p>
+              <p><%= f.submit "发送密码重设邮件", class: "btn btn-primary click-button" %></p>
             <% end%>
           </div>
         </div>
