--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body>
+  <body class="content-page-body">
     <nav class="navbar navbar-fixed-top">
       <div class="container top-header">
         <ul class="nav navbar-nav navbar-left">
@@ -42,7 +42,5 @@
         </ul>
       </div>
     </nav>
-    <div class="background-color">
-    </div>
   </body>
 </html>
