--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html class="single-page-html">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body>
-    <div class="background-color">
-      <div class="container">
+  <body class="single-page-body">
+    <div class="single-page-background">
+      <div class="single-page-container">
         <div class="sign-up-area">
           <h1 class="logo">Tower</h1>
           <div class="sign-box">
@@ -15,7 +15,7 @@
               <p><%= f.text_field :name, class: "form-control", placeholder: "你的名字" %></p>
               <p><%= f.email_field :email, class: "form-control", placeholder: "邮箱,例如: qq号码@qq.com" %></p>
               <p><%= f.password_field :password, class: "form-control", placeholder: "密码， 至少包含6位字符" %></p>
-              <p><%= f.submit "注册", class: "btn btn-primary sign-button" %></p>
+              <p><%= f.submit "注册", class: "btn btn-primary sign-button click-button" %></p>
               <p><%= link_to "已有账号？直接登录", sign_in_path, :class => "sign-link"%></p>
             <% end %>
           </div>
