--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -16,10 +16,12 @@
           <li>
             <div class="col-sm-3 col-md-3">
               <form class="navbar-form" role="search">
-                <div class="input-group top-search-bar-group">
+                <div class="input-group input-group-sm mb-3 top-search-bar-group">
                   <input type="text" class="form-control top-search-bar-input" placeholder="搜索任务">
                   <div class="input-group-btn">
-                    <button class="btn btn-default top-search-bar-button" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    <button class="btn btn-default top-search-bar-button" type="submit">
+		      <span class="glyphicon glyphicon-search top-search-bar-icon"></span>
+		    </button>
                   </div>
                 </div>
               </form>
