Build project-box

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body class="content-page-body">
-    <nav class="navbar navbar-fixed-top">
+    <nav class="navbar">
       <div class="container top-header">
         <ul class="nav navbar-nav navbar-left">
           <li><%= link_to Team.find_by_hashid(params[:id]).name, root_path, :class => "team-name"%></li>
@@ -20,8 +20,8 @@
                   <input type="text" class="form-control top-search-bar-input" placeholder="搜索任务">
                   <div class="input-group-btn">
                     <button class="btn btn-default top-search-bar-button" type="submit">
-		      <span class="glyphicon glyphicon-search top-search-bar-icon"></span>
-		    </button>
+                      <span class="glyphicon glyphicon-search top-search-bar-icon"></span>
+                    </button>
                   </div>
                 </div>
               </form>
@@ -44,5 +44,45 @@
         </ul>
       </div>
     </nav>
+
+    <div class="project-box">
+      <ul>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+        <li>Test</li>
+      </ul>
+
+
+    </div>
   </body>
 </html>
