--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -217,6 +217,21 @@
     background-color: var(--background-color);
 }
 
+.project-box {
+    width: 900px;
+    background-color: #fff;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 10px 50px #eee;
+    margin-bottom: 60px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .team-name {
     font-size: 20px;
     color: var(--logo-color);
