--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -356,3 +356,39 @@
     font-size: 20px;
     color: var(--phone-bottom-text-color);
 }
+
+.project-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+}
+
+.project-item-box {
+    display: table;
+}
+
+.project-item {
+    display: table-cell;
+    vertical-align: middle;
+    background-color: #fff;
+    text-align: center;
+    margin: 10px;
+    width: 180px;
+    height: 140px;
+}
+
+.project-item:hover {
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.project-icon {
+    font-size: 48px;
+    margin-bottom: 16px;
+    color: var(--logo-color);
+}
+
+.project-name {
+    font-size: 18px;
+    font-weight: light;
+    color: #333;
+}
