--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -46,42 +46,108 @@
     </nav>
 
     <div class="project-box">
-      <ul>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
-      </ul>
 
+
+      <div class="project-container" id="sortableContainer">
+        <div class="project-item-box">
+          <div class="project-item">
+            <span class="glyphicon glyphicon-inbox project-icon"></span>
+            <div class="project-name">文件管理器</div>
+          </div>
+        </div>
+
+        <div class="project-item-box">
+          <div class="project-item">
+            <span class="glyphicon glyphicon-time project-icon"></span>
+            <div class="project-name">智能语音闹钟</div>
+          </div>
+        </div>
+
+        <div class="project-item-box">
+          <div class="project-item">
+            <span class="glyphicon glyphicon-lock project-icon"></span>
+            <div class="project-name">超强加密客户端</div>
+          </div>
+        </div>
+
+        <div class="project-item-box">
+          <div class="project-item">
+            <span class="glyphicon glyphicon-print project-icon"></span>
+            <div class="project-name">打印机分享技术</div>
+          </div>
+        </div>
+
+        <div class="project-item-box">
+          <div class="project-item">
+            <span class="glyphicon glyphicon-camera project-icon"></span>
+            <div class="project-name">相机助手</div>
+          </div>
+        </div>
+
+        <div class="project-item-box">
+          <div class="project-item">
+            <span class="glyphicon glyphicon-fire project-icon"></span>
+            <div class="project-name">光盘刻录程序</div>
+          </div>
+        </div>
+
+        <div class="project-item-box">
+          <div class="project-item">
+            <span class="glyphicon glyphicon-plane project-icon"></span>
+            <div class="project-name">机票预订助手</div>
+          </div>
+        </div>
+
+        <div class="project-item-box">
+          <div class="project-item">
+            <span class="glyphicon glyphicon-shopping-cart project-icon"></span>
+            <div class="project-name">在线购物网站</div>
+          </div>
+        </div>
+
+        <div class="project-item-box">
+          <div class="project-item">
+            <span class="glyphicon glyphicon-hdd project-icon"></span>
+            <div class="project-name">在线存储项目</div>
+          </div>
+        </div>
+
+        <div class="project-item-box">
+          <div class="project-item">
+            <span class="glyphicon glyphicon-globe project-icon"></span>
+            <div class="project-name">人造卫星技术</div>
+          </div>
+        </div>
+
+        <div class="project-item-box">
+          <div class="project-item">
+            <span class="glyphicon glyphicon-phone project-icon"></span>
+            <div class="project-name">智能手机生产</div>
+          </div>
+        </div>
+
+        <div class="project-item-box">
+          <div class="project-item">
+            <span class="glyphicon glyphicon-flash project-icon"></span>
+            <div class="project-name">快速SD卡</div>
+          </div>
+        </div>
+
+        <div class="project-item-box">
+          <div class="project-item">
+            <span class="glyphicon glyphicon-stats project-icon"></span>
+            <div class="project-name">无线通讯技术</div>
+          </div>
+        </div>
+
+        <div class="project-item-box">
+          <div class="project-item">
+            <span class="glyphicon glyphicon-blackboard project-icon"></span>
+            <div class="project-name">多人智能会议系统</div>
+          </div>
+        </div>
+        
+      </div>
 
     </div>
   </body>
