Adjust phone project page icon

--- a/app/views/teams/show.html+phone.erb
+++ b/app/views/teams/show.html+phone.erb
@@ -9,7 +9,7 @@
       </div>
       <div class="phone-top-right-area">
         <span class="glyphicon glyphicon-search phone-top-item-icon"></span>
-	<span class="glyphicon glyphicon-th-list phone-top-item-icon"></span>
+	<span class="glyphicon glyphicon-plus phone-top-item-icon"></span>
       </div>
     </div>
     <header class="navbar navbar-fixed-bottom navbar-default">
