Finish desktop version project template and adjust css variable (add float-right and float-left)

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -47,6 +47,15 @@
 
     <div class="project-box">
 
+      <div class="project-button-group">
+        <span class="glyphicon glyphicon-plus"></span>
+        <%= link_to "新建项目", root_path, :class => "project-button" %>
+        <div class="float-right">
+          <span class="glyphicon glyphicon-star project-button"></span>
+          <span class="glyphicon glyphicon-th-large project-button"></span>
+          <span class="glyphicon glyphicon-search project-button"></span>
+        </div>
+      </div>
 
       <div class="project-container" id="sortableContainer">
         <div class="project-item-box">
@@ -146,7 +155,7 @@
             <div class="project-name">多人智能会议系统</div>
           </div>
         </div>
-        
+
       </div>
 
     </div>
