--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -103,14 +103,6 @@
     text-align: center;
 }
 
-.remember-me {
-    float: left;
-}
-
-.forget-button {
-    float: right;
-}
-
 .sign-error {
     width: 256px;
 }
@@ -137,6 +129,14 @@
 }
 
 // Generic page CSS.
+.float-left {
+    float: left;
+}
+
+.float-right {
+    float: right;
+}
+
 .logo {
     font-size: 450%;
     color: var(--logo-color);
@@ -232,6 +232,32 @@
     margin-right: auto;
 }
 
+.project-button-group {
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-bottom: 40px;
+}
+
+.project-button {
+    color: #666;
+    font-size: 14px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.project-button:hover {
+    color: var(--hover-color);
+    text-decoration: none;
+}
+
+.project-button:active,
+.project-button:active:hover,
+.project-button:active:focus,
+.project-button:focus {
+    color: var(--focus-color);
+}
+
+
 .team-name {
     font-size: 20px;
     color: var(--logo-color);
@@ -295,6 +321,42 @@
     font-size: 12px;
 }
 
+.project-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+}
+
+.project-item-box {
+    display: table;
+}
+
+.project-item {
+    display: table-cell;
+    vertical-align: middle;
+    background-color: #fff;
+    text-align: center;
+    margin: 10px;
+    width: 180px;
+    height: 140px;
+}
+
+.project-item:hover {
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.project-icon {
+    font-size: 48px;
+    margin-bottom: 16px;
+    color: var(--logo-color);
+}
+
+.project-name {
+    font-size: 18px;
+    font-weight: light;
+    color: #333;
+}
+
 // Phone page CSS.
 .phone-top-bar {
     background-color: var(--logo-color);
@@ -305,7 +367,6 @@
 }
 
 .phone-top-left-area {
-    float: left;
     text-align: center;
     margin: auto;
     display: table;
@@ -313,7 +374,6 @@
 }
 
 .phone-top-right-area {
-    float: right;
     text-align: center;
     margin: auto;
     display: table;
@@ -357,38 +417,3 @@
     color: var(--phone-bottom-text-color);
 }
 
-.project-container {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-}
-
-.project-item-box {
-    display: table;
-}
-
-.project-item {
-    display: table-cell;
-    vertical-align: middle;
-    background-color: #fff;
-    text-align: center;
-    margin: 10px;
-    width: 180px;
-    height: 140px;
-}
-
-.project-item:hover {
-    border-radius: 4px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.project-icon {
-    font-size: 48px;
-    margin-bottom: 16px;
-    color: var(--logo-color);
-}
-
-.project-name {
-    font-size: 18px;
-    font-weight: light;
-    color: #333;
-}
