--- a/app/views/teams/show.html+phone.erb
+++ b/app/views/teams/show.html+phone.erb
@@ -4,12 +4,12 @@
   </head>
   <body>
     <div class="phone-top-bar">
-      <div class="phone-top-left-area">
+      <div class="phone-top-left-area float-left">
         <span class="phone-top-name">项目</span>
       </div>
-      <div class="phone-top-right-area">
+      <div class="phone-top-right-area float-right">
         <span class="glyphicon glyphicon-search phone-top-item-icon"></span>
-	<span class="glyphicon glyphicon-plus phone-top-item-icon"></span>
+	<span class="glyphicon glyphicon-th-list phone-top-item-icon"></span>
       </div>
     </div>
     <header class="navbar navbar-fixed-bottom navbar-default">
