--- a/app/views/teams/show.html+phone.erb
+++ b/app/views/teams/show.html+phone.erb
@@ -1,44 +1,131 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div class="phone-top-bar">
-      <div class="phone-top-left-area float-left">
+    <div class="phone-page-box col-xs-12">
+      <div class="phone-page-top-bar flex-vcenter">
         <span class="phone-top-name">项目</span>
+        <div class="flex-align-right">
+          <span class="glyphicon glyphicon-search phone-top-item-icon"></span>
+          <span class="glyphicon glyphicon-th-list phone-top-item-icon"></span>
+        </div>
       </div>
-      <div class="phone-top-right-area float-right">
-        <span class="glyphicon glyphicon-search phone-top-item-icon"></span>
-	<span class="glyphicon glyphicon-th-list phone-top-item-icon"></span>
+
+      <div class="phone-page-scroll-area">
+        <ul id="phoneSortableContainer">
+          <li class="phone-project-item-box flex-vcenter">
+            <span class="glyphicon glyphicon-align-justify phone-project-item-handle"></span>
+            <span class="glyphicon glyphicon-inbox phone-project-icon"></span>
+            <span class="phone-project-item-name">文件管理器</span>
+          </li>
+
+          <li class="phone-project-item-box flex-vcenter">
+            <span class="glyphicon glyphicon-align-justify phone-project-item-handle"></span>
+            <span class="glyphicon glyphicon-time phone-project-icon"></span>
+            <span class="phone-project-item-name">智能语音闹钟</span>
+          </li>
+
+          <li class="phone-project-item-box flex-vcenter">
+            <span class="glyphicon glyphicon-align-justify phone-project-item-handle"></span>
+            <span class="glyphicon glyphicon-lock phone-project-icon"></span>
+            <span class="phone-project-item-name">超强加密客户端</span>
+          </li>
+
+          <li class="phone-project-item-box flex-vcenter">
+            <span class="glyphicon glyphicon-align-justify phone-project-item-handle"></span>
+            <span class="glyphicon glyphicon-print phone-project-icon"></span>
+            <span class="phone-project-item-name">打印机分享技术</span>
+          </li>
+
+          <li class="phone-project-item-box flex-vcenter">
+            <span class="glyphicon glyphicon-align-justify phone-project-item-handle"></span>
+            <span class="glyphicon glyphicon-camera phone-project-icon"></span>
+            <span class="phone-project-item-name">相机助手</span>
+          </li>
+
+          <li class="phone-project-item-box flex-vcenter">
+            <span class="glyphicon glyphicon-align-justify phone-project-item-handle"></span>
+            <span class="glyphicon glyphicon-fire phone-project-icon"></span>
+            <span class="phone-project-item-name">光盘刻录程序</span>
+          </li>
+
+          <li class="phone-project-item-box flex-vcenter">
+            <span class="glyphicon glyphicon-align-justify phone-project-item-handle"></span>
+            <span class="glyphicon glyphicon-plane phone-project-icon"></span>
+            <span class="phone-project-item-name">机票预订助手</span>
+          </li>
+
+          <li class="phone-project-item-box flex-vcenter">
+            <span class="glyphicon glyphicon-align-justify phone-project-item-handle"></span>
+            <span class="glyphicon glyphicon-shopping-cart phone-project-icon"></span>
+            <span class="phone-project-item-name">在线购物网站</span>
+          </li>
+
+          <li class="phone-project-item-box flex-vcenter">
+            <span class="glyphicon glyphicon-align-justify phone-project-item-handle"></span>
+            <span class="glyphicon glyphicon-hdd phone-project-icon"></span>
+            <span class="phone-project-item-name">在线存储项目</span>
+          </li>
+
+          <li class="phone-project-item-box flex-vcenter">
+            <span class="glyphicon glyphicon-align-justify phone-project-item-handle"></span>
+            <span class="glyphicon glyphicon-globe phone-project-icon"></span>
+            <span class="phone-project-item-name">人造卫星技术</span>
+          </li>
+
+          <li class="phone-project-item-box flex-vcenter">
+            <span class="glyphicon glyphicon-align-justify phone-project-item-handle"></span>
+            <span class="glyphicon glyphicon-phone phone-project-icon"></span>
+            <span class="phone-project-item-name">智能手机生产</span>
+          </li>
+
+          <li class="phone-project-item-box flex-vcenter">
+            <span class="glyphicon glyphicon-align-justify phone-project-item-handle"></span>
+            <span class="glyphicon glyphicon-flash phone-project-icon"></span>
+            <span class="phone-project-item-name">快速SD卡</span>
+          </li>
+
+          <li class="phone-project-item-box flex-vcenter">
+            <span class="glyphicon glyphicon-align-justify phone-project-item-handle"></span>
+            <span class="glyphicon glyphicon-stats phone-project-icon"></span>
+            <span class="phone-project-item-name">无线通讯技术</span>
+          </li>
+
+          <li class="phone-project-item-box flex-vcenter">
+            <span class="glyphicon glyphicon-align-justify phone-project-item-handle"></span>
+            <span class="glyphicon glyphicon-blackboard phone-project-icon"></span>
+            <span class="phone-project-item-name">多人智能会议系统</span>
+          </li>
+
+        </ul>
       </div>
+
+      <div class="phone-page-bottom-bar flex-vcenter-columns">
+	<div class="phone-bottom-tab">
+          <div class="glyphicon glyphicon-inbox phone-bottom-item-icon"></div>
+          <div>项目</div>
+        </div>
+        <div class="phone-bottom-tab">
+          <div class="glyphicon glyphicon-comment phone-bottom-item-icon"></div>
+          <div>动态</div>
+        </div>
+        <div class="phone-bottom-tab">
+          <div class="glyphicon glyphicon-user phone-bottom-item-icon"></div>
+          <div>我的</div>
+        </div>
+        <div class="phone-bottom-tab">
+          <div class="glyphicon glyphicon-calendar phone-bottom-item-icon"></div>
+          <div>团队</div>
+        </div>
+        <div class="phone-bottom-tab">
+          <div class="glyphicon glyphicon-tasks phone-bottom-item-icon"></div>
+	  <div>更多</div>
+        </div>
+      </div>
+
     </div>
-    <header class="navbar navbar-fixed-bottom navbar-default">
-      <div class="container">
-        <nav>
-          <ul class="nav navbar-nav">
-            <div class="phone-bottom-tab">
-	      <span class="glyphicon glyphicon-inbox phone-bottom-item-icon"></span>
-	      <li><%= link_to "项目", root_path, :class => "phone-bottom-item-text" %></li>
-            </div>
-            <div class="phone-bottom-tab">
-	      <span class="glyphicon glyphicon-comment phone-bottom-item-icon"></span>
-	      <li><%= link_to "动态", root_path, :class => "phone-bottom-item-text" %></li>
-            </div>
-            <div class="phone-bottom-tab">
-	      <span class="glyphicon glyphicon-user phone-bottom-item-icon"></span>
-	      <li><%= link_to "我的", root_path, :class => "phone-bottom-item-text" %></li>
-            </div>
-            <div class="phone-bottom-tab">
-	      <span class="glyphicon glyphicon-calendar phone-bottom-item-icon"></span>
-	      <li><%= link_to "团队", root_path, :class => "phone-bottom-item-text" %></li>
-            </div>
-            <div class="phone-bottom-tab">
-	      <span class="glyphicon glyphicon-tasks phone-bottom-item-icon"></span>
-	      <li><%= link_to "更多", root_path, :class => "phone-bottom-item-text" %></li>
-            </div>
-          </ul>
-        </nav>
-      </div>
-    </header>
+
   </body>
 </html>
